RPN-875 Activity controller
